--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
 
       <button
         type="button"
-        onclick="console.log(cashRegister(price, payment, cid))"
+        onclick="displayChange(cashRegister(price, payment, cid))"
       >
         Calculate
       </button>
     </form>
+
+    <p></p>
     <script src="script.js"></script>
   </body>
 </html>
