Table for change

--- a/index.html
+++ b/index.html
@@ -36,6 +36,16 @@
       </form>
 
       <p id="result"></p>
+      <table id="myTable">
+        <thead>
+          <tr>
+            <th>Currencies</th>
+            <th>Values</th>
+          </tr>
+        </thead>
+        <tbody id="tableBody">
+        </tbody>
+      </table>
     </main>
 
     <script src="script.js"></script>
