--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <tbody id="tableBody">
         </tbody>
       </table>
+      <h2 id="tillStatus"></h2>
     </main>
 
     <script src="script.js"></script>
