--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Cash Register</h1>
-
+    
     <main>
+      <h1>Cash Register</h1>
       <form>
         <div id="OuterDiv">
           <div id="priceDiv">
@@ -22,7 +22,7 @@
           </div>
 
           <div id="paymentDiv">
-            <label for="payment">Payment:</label>
+            <label for="payment" id="paymentLabel">Payment:</label>
             <input type="text" id="payment" name="payment" />
           </div>
         </div>
