Added Quantity column

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
           <tr>
             <th>Currencies</th>
             <th>Values</th>
+            <th>Quantity</th>
           </tr>
         </thead>
         <tbody id="tableBody">
